syntax = "proto3";

package com.calculationService;

option java_package = "com.calculationService";
option java_multiple_files = true;

message RequestHeader {
  string transactionId = 1;
  string memberCode = 2;
  string productCode = 3;
  string monitoringDate = 4;
}

message Model {
  string templateId = 1;
}

message SubjectData {
  string subject = 1;
}

message CalculationEngineRequest {
  RequestHeader requestHeader = 1;
  repeated SubjectData subjectData = 2;
  repeated Model models = 3;
}

message ErrorHeader {
  string errorCode = 1;
  string errorDesc = 2;
}

message ResponseHeader {
  string responseCode = 1;
  string responseDesc = 2;
}

message FeatureResponse {
  string featureName = 1;
  string featureValue = 2;
}

message CalculationEngineResponse {
  ResponseHeader responseHeader = 1;
  ErrorHeader errors = 2;
  repeated FeatureResponse featureResponses = 3;
  string templateId = 4;
}

message CalculationEngineResponseList {
  repeated CalculationEngineResponse responses = 1;
}

service CalculationEngineService {
  rpc performCalculation(CalculationEngineRequest) returns (CalculationEngineResponseList);
}
